--2020-02-25 22:39:15--  http://anssi.gov.gn/documents/mot-de-passe.pdf%0D
Resolving anssi.gov.gn (anssi.gov.gn)... --2020-02-25 22:39:15--  http://anssi.gov.gn/documents/mot-de-passe.pdf%0D
Resolving anssi.gov.gn (anssi.gov.gn)... 92.222.147.163
Connecting to anssi.gov.gn (anssi.gov.gn)|92.222.147.163|:80... failed: Connection refused.
92.222.147.163
Connecting to anssi.gov.gn (anssi.gov.gn)|92.222.147.163|:80... failed: Connection refused.
--2020-02-25 22:39:17--  http://anssi.gov.gn/documents/mot-de-passe.pdf%0D
Resolving anssi.gov.gn (anssi.gov.gn)... 92.222.147.163
Connecting to anssi.gov.gn (anssi.gov.gn)|92.222.147.163|:80... failed: Connection refused.
--2020-02-25 22:39:17--  http://anssi.gov.gn/documents/mot-de-passe.pdf%0D
Resolving anssi.gov.gn (anssi.gov.gn)... 92.222.147.163
Connecting to anssi.gov.gn (anssi.gov.gn)|92.222.147.163|:80... failed: Connection refused.
