--2020-02-25 22:39:27--  http://ceni.org.gn/wp-content/uploads/2018/03/COMMUNE_KINIERAN_OK.pdf%0D
Resolving ceni.org.gn (ceni.org.gn)... 66.70.216.80
Connecting to ceni.org.gn (ceni.org.gn)|66.70.216.80|:80... connected.
HTTP request sent, awaiting response... 404 Not Found
2020-02-25 22:39:27 ERROR 404: Not Found.

--2020-02-25 22:39:28--  http://ceni.org.gn/wp-content/uploads/2018/03/COMMUNE_KINIERAN_OK.pdf%0D
Resolving ceni.org.gn (ceni.org.gn)... 66.70.216.80
Connecting to ceni.org.gn (ceni.org.gn)|66.70.216.80|:80... connected.
HTTP request sent, awaiting response... 404 Not Found
2020-02-25 22:39:28 ERROR 404: Not Found.

