--2020-02-25 22:39:32--  http://commerce.gov.gn/wp-content/uploads/2019/08/APP1TheApplicationProcess-1.pdf%0D
Resolving commerce.gov.gn (commerce.gov.gn)... --2020-02-25 22:39:32--  http://commerce.gov.gn/wp-content/uploads/2019/08/APP1TheApplicationProcess-1.pdf%0D
Resolving commerce.gov.gn (commerce.gov.gn)... 144.76.199.134
Connecting to commerce.gov.gn (commerce.gov.gn)|144.76.199.134|:80... 144.76.199.134
Connecting to commerce.gov.gn (commerce.gov.gn)|144.76.199.134|:80... failed: Connection timed out.
Giving up.

failed: Connection timed out.
Giving up.

