--2020-03-02 04:16:07--  http://commerce.gov.gn/wp-content/uploads/2019/08/APP1TheApplicationProcess-1.pdf
Resolving commerce.gov.gn (commerce.gov.gn)... 144.76.199.134
Connecting to commerce.gov.gn (commerce.gov.gn)|144.76.199.134|:80... connected.
HTTP request sent, awaiting response... 200 OK
Length: 746229 (729K) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... ..........  6% 8.48M 1s
    50K .......... .......... .......... .......... .......... 13% 18.3M 0s
   100K .......... .......... .......... .......... .......... 20%  117M 0s
   150K .......... .......... .......... .......... .......... 27%  125M 0s
   200K .......... .......... .......... .......... .......... 34% 19.1M 0s
   250K .......... .......... .......... .......... .......... 41%  102M 0s
   300K .......... .......... .......... .......... .......... 48% 24.0M 0s
   350K .......... .......... .......... .......... .......... 54%  210M 0s
   400K .......... .......... .......... .......... .......... 61%  358M 0s
   450K .......... .......... .......... .......... .......... 68%  101M 0s
   500K .......... .......... .......... .......... .......... 75% 27.8M 0s
   550K .......... .......... .......... .......... .......... 82%  147M 0s
   600K .......... .......... .......... .......... .......... 89%  102M 0s
   650K .......... .......... .......... .......... .......... 96%  216M 0s
   700K .......... .......... ........                        100% 61.4M=0.2s

2020-03-02 04:16:08 (38.6 Mb/s) - ‘/dev/null’ saved [746229/746229]

