--2020-02-25 22:39:36--  https://dni.gov.gn/wp-content/uploads/2019/08/rapport-interm.pdf%0D
Resolving dni.gov.gn (dni.gov.gn)... --2020-02-25 22:39:36--  https://dni.gov.gn/wp-content/uploads/2019/08/rapport-interm.pdf%0D
Resolving dni.gov.gn (dni.gov.gn)... 144.76.240.174
Connecting to dni.gov.gn (dni.gov.gn)|144.76.240.174|:443... 144.76.240.174
Connecting to dni.gov.gn (dni.gov.gn)|144.76.240.174|:443... failed: Connection timed out.
Giving up.

failed: Connection timed out.
Giving up.

