--2020-03-02 04:16:09--  http://dni.gov.gn/wp-content/uploads/2019/08/rapport-interm.pdf
Resolving dni.gov.gn (dni.gov.gn)... 144.76.240.174
Connecting to dni.gov.gn (dni.gov.gn)|144.76.240.174|:80... connected.
HTTP request sent, awaiting response... 301 Moved Permanently
Location: https://dni.gov.gn/wp-content/uploads/2019/08/rapport-interm.pdf [following]
--2020-03-02 04:16:09--  https://dni.gov.gn/wp-content/uploads/2019/08/rapport-interm.pdf
Connecting to dni.gov.gn (dni.gov.gn)|144.76.240.174|:443... connected.
HTTP request sent, awaiting response... 200 OK
Length: 1814687 (1.7M) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... ..........  2% 8.31M 2s
    50K .......... .......... .......... .......... ..........  5% 16.3M 1s
   100K .......... .......... .......... .......... ..........  8%  330M 1s
   150K .......... .......... .......... .......... .......... 11%  212M 1s
   200K .......... .......... .......... .......... .......... 14% 18.2M 1s
   250K .......... .......... .......... .......... .......... 16%  116M 1s
   300K .......... .......... .......... .......... .......... 19% 22.0M 0s
   350K .......... .......... .......... .......... .......... 22%  135M 0s
   400K .......... .......... .......... .......... .......... 25%  183M 0s
   450K .......... .......... .......... .......... .......... 28% 89.7M 0s
   500K .......... .......... .......... .......... .......... 31% 32.1M 0s
   550K .......... .......... .......... .......... .......... 33%  100M 0s
   600K .......... .......... .......... .......... .......... 36% 85.3M 0s
   650K .......... .......... .......... .......... .......... 39%  311M 0s
   700K .......... .......... .......... .......... .......... 42%  250M 0s
   750K .......... .......... .......... .......... .......... 45% 31.9M 0s
   800K .......... .......... .......... .......... .......... 47%  254M 0s
   850K .......... .......... .......... .......... .......... 50%  644M 0s
   900K .......... .......... .......... .......... .......... 53%  303M 0s
   950K .......... .......... .......... .......... .......... 56%  233M 0s
  1000K .......... .......... .......... .......... .......... 59% 73.0M 0s
  1050K .......... .......... .......... .......... .......... 62%  178M 0s
  1100K .......... .......... .......... .......... .......... 64%  484M 0s
  1150K .......... .......... .......... .......... .......... 67% 32.3M 0s
  1200K .......... .......... .......... .......... .......... 70%  108M 0s
  1250K .......... .......... .......... .......... .......... 73%  499M 0s
  1300K .......... .......... .......... .......... .......... 76%  493M 0s
  1350K .......... .......... .......... .......... .......... 78%  304M 0s
  1400K .......... .......... .......... .......... .......... 81% 80.5M 0s
  1450K .......... .......... .......... .......... .......... 84%  254M 0s
  1500K .......... .......... .......... .......... .......... 87%  463M 0s
  1550K .......... .......... .......... .......... .......... 90%  302M 0s
  1600K .......... .......... .......... .......... .......... 93% 51.5M 0s
  1650K .......... .......... .......... .......... .......... 95%  211M 0s
  1700K .......... .......... .......... .......... .......... 98%  288M 0s
  1750K .......... .......... ..                              100%  537M=0.2s

2020-03-02 04:16:10 (64.9 Mb/s) - ‘/dev/null’ saved [1814687/1814687]

