--2020-02-25 22:39:29--  https://edg.com.gn/wp-content/uploads/2019/05/Saidi2018.pdf%0D
Resolving edg.com.gn (edg.com.gn)... 167.114.106.124
Connecting to edg.com.gn (edg.com.gn)|167.114.106.124|:443... connected.
--2020-02-25 22:39:29--  https://edg.com.gn/wp-content/uploads/2019/05/Saidi2018.pdf%0D
Resolving edg.com.gn (edg.com.gn)... 167.114.106.124
Connecting to edg.com.gn (edg.com.gn)|167.114.106.124|:443... connected.
HTTP request sent, awaiting response... HTTP request sent, awaiting response... Read error (Connection timed out) in headers.
Giving up.

Read error (Connection timed out) in headers.
Giving up.

