--2020-02-25 22:39:17--  http://jeunesse.gov.gn/wp-content/uploads/2016/10/BROCHURE_FNRPE_V3_PAP.pdf%0D
Resolving jeunesse.gov.gn (jeunesse.gov.gn)... --2020-02-25 22:39:17--  http://jeunesse.gov.gn/wp-content/uploads/2016/10/BROCHURE_FNRPE_V3_PAP.pdf%0D
Resolving jeunesse.gov.gn (jeunesse.gov.gn)... 35.209.227.95
Connecting to jeunesse.gov.gn (jeunesse.gov.gn)|35.209.227.95|:80... 35.209.227.95
Connecting to jeunesse.gov.gn (jeunesse.gov.gn)|35.209.227.95|:80... connected.
HTTP request sent, awaiting response... connected.
HTTP request sent, awaiting response... 404 Not Found
2020-02-25 22:39:18 ERROR 404: Not Found.

404 Not Found
2020-02-25 22:39:19 ERROR 404: Not Found.

