--2020-03-02 04:16:00--  http://jeunesse.gov.gn/wp-content/uploads/2016/10/BROCHURE_FNRPE_V3_PAP.pdf
Resolving jeunesse.gov.gn (jeunesse.gov.gn)... 35.209.227.95
Connecting to jeunesse.gov.gn (jeunesse.gov.gn)|35.209.227.95|:80... connected.
HTTP request sent, awaiting response... 200 OK
Length: 994684 (971K) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... ..........  5% 1.89M 4s
    50K .......... .......... .......... .......... .......... 10% 3.85M 3s
   100K .......... .......... .......... .......... .......... 15%  105M 2s
   150K .......... .......... .......... .......... .......... 20%  216M 1s
   200K .......... .......... .......... .......... .......... 25% 3.81M 1s
   250K .......... .......... .......... .......... .......... 30%  102M 1s
   300K .......... .......... .......... .......... .......... 36%  391M 1s
   350K .......... .......... .......... .......... .......... 41%  410M 1s
   400K .......... .......... .......... .......... .......... 46% 4.19M 1s
   450K .......... .......... .......... .......... .......... 51% 81.1M 1s
   500K .......... .......... .......... .......... .......... 56% 88.1M 0s
   550K .......... .......... .......... .......... .......... 61% 82.5M 0s
   600K .......... .......... .......... .......... .......... 66%  169M 0s
   650K .......... .......... .......... .......... .......... 72% 4.53M 0s
   700K .......... .......... .......... .......... .......... 77%  213M 0s
   750K .......... .......... .......... .......... .......... 82%  147M 0s
   800K .......... .......... .......... .......... .......... 87%  443M 0s
   850K .......... .......... .......... .......... .......... 92%  224M 0s
   900K .......... .......... .......... .......... .......... 97%  120M 0s
   950K .......... .......... .                               100% 27.9M=0.7s

2020-03-02 04:16:01 (12.0 Mb/s) - ‘/dev/null’ saved [994684/994684]

