--2020-02-25 22:39:14--  https://mef.gov.gn/uploads/Codes/cgi-guinee.pdf%0D
Resolving mef.gov.gn (mef.gov.gn)... --2020-02-25 22:39:14--  https://mef.gov.gn/uploads/Codes/cgi-guinee.pdf%0D
Resolving mef.gov.gn (mef.gov.gn)... 144.76.240.174
Connecting to mef.gov.gn (mef.gov.gn)|144.76.240.174|:443... 144.76.240.174
Connecting to mef.gov.gn (mef.gov.gn)|144.76.240.174|:443... connected.
connected.
HTTP request sent, awaiting response... HTTP request sent, awaiting response... 404 Not Found
404 Not Found
2020-02-25 22:39:14 ERROR 404: Not Found.

2020-02-25 22:39:14 ERROR 404: Not Found.

