--2020-03-02 04:15:56--  http://mef.gov.gn/uploads/Codes/cgi-guinee.pdf
Resolving mef.gov.gn (mef.gov.gn)... 144.76.240.174
Connecting to mef.gov.gn (mef.gov.gn)|144.76.240.174|:80... connected.
HTTP request sent, awaiting response... 200 OK
Length: 1708964 (1.6M) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... ..........  2% 8.57M 2s
    50K .......... .......... .......... .......... ..........  5% 17.0M 1s
   100K .......... .......... .......... .......... ..........  8% 88.6M 1s
   150K .......... .......... .......... .......... .......... 11%  160M 1s
   200K .......... .......... .......... .......... .......... 14% 18.9M 1s
   250K .......... .......... .......... .......... .......... 17%  111M 0s
   300K .......... .......... .......... .......... .......... 20% 28.5M 0s
   350K .......... .......... .......... .......... .......... 23%  198M 0s
   400K .......... .......... .......... .......... .......... 26% 93.9M 0s
   450K .......... .......... .......... .......... .......... 29%  108M 0s
   500K .......... .......... .......... .......... .......... 32% 31.2M 0s
   550K .......... .......... .......... .......... .......... 35%  105M 0s
   600K .......... .......... .......... .......... .......... 38%  206M 0s
   650K .......... .......... .......... .......... .......... 41%  100M 0s
   700K .......... .......... .......... .......... .......... 44%  154M 0s
   750K .......... .......... .......... .......... .......... 47% 41.2M 0s
   800K .......... .......... .......... .......... .......... 50%  137M 0s
   850K .......... .......... .......... .......... .......... 53%  335M 0s
   900K .......... .......... .......... .......... .......... 56%  472M 0s
   950K .......... .......... .......... .......... .......... 59%  211M 0s
  1000K .......... .......... .......... .......... .......... 62%  257M 0s
  1050K .......... .......... .......... .......... .......... 65%  122M 0s
  1100K .......... .......... .......... .......... .......... 68% 98.8M 0s
  1150K .......... .......... .......... .......... .......... 71% 49.5M 0s
  1200K .......... .......... .......... .......... .......... 74% 84.6M 0s
  1250K .......... .......... .......... .......... .......... 77%  202M 0s
  1300K .......... .......... .......... .......... .......... 80%  665M 0s
  1350K .......... .......... .......... .......... .......... 83%  161M 0s
  1400K .......... .......... .......... .......... .......... 86%  222M 0s
  1450K .......... .......... .......... .......... .......... 89%  329M 0s
  1500K .......... .......... .......... .......... .......... 92%  242M 0s
  1550K .......... .......... .......... .......... .......... 95%  214M 0s
  1600K .......... .......... .......... .......... .......... 98% 62.1M 0s
  1650K .......... ........                                   100% 1.20G=0.2s

2020-03-02 04:15:57 (64.3 Mb/s) - ‘/dev/null’ saved [1708964/1708964]

